--- a/index.html
+++ b/index.html
@@ -1103,13 +1103,11 @@
     <button class="download-button" onclick="showChecklistImage()">📷 Показать и скачать чек-лист (JPG)</button>
     <button class="reset-button" onclick="resetChecklist()">🔄 Сбросить все изменения</button>
   </div>
-
   <!-- Скрытый шаблон для изображения -->
   <div id="image-template">
     <h2>Чек-лист для подготовки к выступлению</h2>
     <div id="image-content"></div>
   </div>
-
   <!-- Модальное окно -->
   <div id="imageModal" class="modal">
     <div class="modal-content">
@@ -1118,26 +1116,21 @@
       <canvas id="modalImageCanvas"></canvas>
       <br>
       <button id="downloadImageBtn">💾 Скачать изображение</button>
-
-      <!-- Кнопка "Если не скачивается" (всегда видна) -->
+      <!-- Кнопка "Если не скачивается" -->
       <div id="alternativeDownloadSection" style="margin-top: 15px;">
         <p><strong>Если не скачивается:</strong></p>
         <button id="alternativeDownloadBtn">Показать альтернативные изображения</button>
       </div>
-
-      <!-- Контейнер для альтернативных изображений -->
-      <div id="alternativeImagesContainer" style="margin-top: 15px; display: none; flex-direction: column; gap: 15px;"></div>
-
+      <!-- Контейнер для альтернативных изображений (лента) -->
+      <div id="alternativeImagesContainer" style="margin-top: 15px; display: none; overflow-x: auto; white-space: nowrap; padding: 10px 0; scroll-behavior: smooth; gap: 15px; display: flex;"></div>
       <div class="loading" id="modalLoading">
         <div class="spinner"></div>
         <p>Подготовка файла к скачиванию...</p>
       </div>
     </div>
   </div>
-
   <!-- Подключаем html2canvas -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
   <script>
     // Функция обновления прогресса
     function updateProgress() {
@@ -1449,10 +1442,8 @@
           });
           imageContent.appendChild(document.createElement('br'));
         });
-
         const template = document.getElementById('image-template');
         template.style.display = 'block';
-
         const targetDPI = 96;
         const scale = window.devicePixelRatio || 1;
         const templateWidthMM = 210;
@@ -1466,7 +1457,6 @@
           width: expectedWidthPx,
           windowWidth: expectedWidthPx
         };
-
         setTimeout(() => {
           html2canvas(template, canvasOptions).then(canvas => {
             template.style.display = 'none';
@@ -1479,20 +1469,16 @@
             modalImg.width = canvas.width;
             modalImg.height = canvas.height;
             ctx.drawImage(canvas, 0, 0);
-
             downloadBtn.disabled = false;
             downloadBtn.textContent = "💾 Скачать изображение";
             modal.style.display = "block";
-
             span.onclick = function() { modal.style.display = "none"; };
             window.onclick = function(event) { if (event.target == modal) { modal.style.display = "none"; } };
-
             downloadBtn.onclick = function() {
               downloadBtn.disabled = true;
               downloadBtn.textContent = "Подготовка...";
               const loadingIndicator = document.getElementById('modalLoading');
               loadingIndicator.style.display = 'block';
-
               canvas.toBlob(function(blob) {
                 if (!blob) {
                   alert('Ошибка при создании изображения.');
@@ -1501,7 +1487,6 @@
                   downloadBtn.textContent = "💾 Скачать изображение";
                   return;
                 }
-
                 try {
                   const url = window.URL.createObjectURL(blob);
                   const a = document.createElement('a');
@@ -1535,11 +1520,15 @@
       }
     }
 
-    // Кнопка "Если не скачивается" (всегда видна)
+    // Кнопка "Если не скачивается" — показывает горизонтальную ленту изображений
     document.getElementById('alternativeDownloadBtn').addEventListener('click', function() {
       const container = document.getElementById('alternativeImagesContainer');
       container.innerHTML = '';
       container.style.display = 'flex';
+      container.style.overflowX = 'auto';
+      container.style.gap = '15px';
+      container.style.padding = '10px 0';
+      container.style.scrollBehavior = 'smooth';
 
       const images = [
         'https://drive.google.com/uc?export=view&id=1_0ZtLHjU5opnOSrOrqYKX7ko07DtCajr',
@@ -1549,31 +1538,19 @@
 
       images.forEach((src, index) => {
         const imgBox = document.createElement('div');
+        imgBox.style.flex = '0 0 auto';
+        imgBox.style.width = '280px';
         imgBox.style.textAlign = 'center';
 
         const img = document.createElement('img');
         img.src = src;
         img.alt = `Изображение ${index + 1}`;
-        img.style.maxWidth = '100%';
+        img.style.width = '100%';
         img.style.height = 'auto';
         img.style.borderRadius = '8px';
         img.style.boxShadow = '0 2px 8px rgba(0,0,0,0.1)';
 
-        const link = document.createElement('a');
-        link.href = src;
-        link.download = `чек-лист_альтернатива_${index + 1}.jpg`;
-        link.textContent = 'Скачать изображение';
-        link.style.display = 'inline-block';
-        link.style.marginTop = '10px';
-        link.style.padding = '8px 16px';
-        link.style.backgroundColor = '#4cc9f0';
-        link.style.color = 'white';
-        link.style.borderRadius = '5px';
-        link.style.textDecoration = 'none';
-        link.style.fontSize = '0.9rem';
-
         imgBox.appendChild(img);
-        imgBox.appendChild(link);
         container.appendChild(imgBox);
       });
     });
