--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
       const span = modal.querySelector('.close');
 
       // URL первого альтернативного изображения
-      img.src = 'https://drive.google.com/file/d/1y7-ZQIHDBKNDrEE6irrYr6v5jBrHWlJW/view?usp=drive_link';
+      img.src = 'https://disk.yandex.ru/i/-YoZnhaaqnAH6A';
 
       // Показать модальное окно
       modal.style.display = 'block';
