--- a/index.html
+++ b/index.html
@@ -1542,7 +1542,7 @@
       const modal = document.getElementById('fullScreenImageModal');
       const img = document.getElementById('fullScreenImage');
       const span = modal.querySelector('.close');
-      img.src = 'https://disk.yandex.ru/i/-YoZnhaaqnAH6A';
+      img.src = 'https://disk.yandex.ru/i/st8tL50DQASlSg';
       modal.style.display = 'block';
       span.onclick = function() { modal.style.display = 'none'; };
       window.onclick = function(event) { if (event.target == modal) { modal.style.display = 'none'; } };
