--- a/index.html
+++ b/index.html
@@ -1542,7 +1542,7 @@
       const modal = document.getElementById('fullScreenImageModal');
       const img = document.getElementById('fullScreenImage');
       const span = modal.querySelector('.close');
-      img.src = 'https://disk.yandex.ru/i/st8tL50DQASlSg';
+      img.src = 'https://github.com/osinec/preparation/blob/a451ca92fa3683f2bc3957d2f0ab68291bf61a0f/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png';
       modal.style.display = 'block';
       span.onclick = function() { modal.style.display = 'none'; };
       window.onclick = function(event) { if (event.target == modal) { modal.style.display = 'none'; } };
