--- a/index.html
+++ b/index.html
@@ -1117,32 +1117,13 @@
       <canvas id="modalImageCanvas"></canvas>
       <br>
       <button id="downloadImageBtn">💾 Скачать изображение</button>
-      <div id="alternativeDownloadSection" style="margin-top: 15px; text-align: center;">
-        <button id="alternativeDownloadBtn" style="
-          padding: 10px 20px;
-          background: #f8961e;
-          color: white;
-          border: none;
-          border-radius: 8px;
-          cursor: pointer;
-          font-size: 1rem;
-          font-weight: 600;
-          box-shadow: 0 4px 10px rgba(248, 150, 30, 0.2);
-          transition: all 0.3s ease;
-        ">Если не скачивается</button>
-      </div>
+      <p style="color: #ccc; font-size: 0.9rem; margin-top: 10px;">
+        Если изображение не скачивается автоматически, кликните по нему правой кнопкой и выберите "Сохранить изображение как..."
+      </p>
       <div class="loading" id="modalLoading">
         <div class="spinner"></div>
         <p>Подготовка файла к скачиванию...</p>
       </div>
-    </div>
-  </div>
-
-  <!-- Модальное окно для альтернативного изображения с Яндекс.Диска -->
-  <div id="fullScreenImageModal" class="modal">
-    <div class="modal-content" style="padding: 0; margin: 0; width: 95%; max-width: none; height: 95vh; border-radius: 0;">
-      <span class="close" style="position: absolute; top: 10px; right: 10px; z-index: 10;">&times;</span>
-      <img id="fullScreenImage" style="width: 100%; height: 100%; object-fit: contain; background: #000;" />
     </div>
   </div>
 
@@ -1429,7 +1410,6 @@
             li.appendChild(checkbox);
             li.appendChild(label);
             li.appendChild(buttonsContainer);
-            subListUl.appendChild(li);
             if (subItem.checked) label.classList.add('checked');
           });
         }
@@ -1536,20 +1516,6 @@
         alert('Ошибка при подготовке изображения.');
       }
     }
-
-    // Кнопка "Если не скачивается" — открывает изображение с Яндекс.Диска
-    document.getElementById('alternativeDownloadBtn').addEventListener('click', function() {
-      const modal = document.getElementById('fullScreenImageModal');
-      const img = document.getElementById('fullScreenImage');
-      const span = modal.querySelector('.close');
-      img.src = 'https://github.com/osinec/preparation/blob/a451ca92fa3683f2bc3957d2f0ab68291bf61a0f/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png';
-      modal.style.display = 'block';
-      span.onclick = function() { modal.style.display = 'none'; };
-      window.onclick = function(event) { if (event.target == modal) { modal.style.display = 'none'; } };
-      img.onerror = function() {
-        this.src = 'https://via.placeholder.com/800x600?text=Файл+недоступен';
-      };
-    });
 
     function resetChecklist() {
       if (confirm('Сбросить все изменения?')) {
