--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Определите цель выступления (информировать, убедить, вдохновить и т.д.).</label>
+              <label>Определите цель выступления (информировать, убедить, вдохновить и т.д.)</label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -720,7 +720,7 @@
             </li>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Изучите аудиторию: возраст, интересы, уровень знаний по теме.</label>
+              <label>Изучите аудиторию: возраст, интересы, уровень знаний по теме.<br> это поможет найти нужные слова</label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -728,7 +728,7 @@
             </li>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Сформулируйте ключевой посыл (основная идея, которую хотите донести).</label>
+              <label>Сформулируйте основную мысль ( Должна быть короткой и запоминающейся).</label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -756,7 +756,7 @@
             </li>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Подготовьте тезисы или полный текст выступления.</label>
+              <label>Подготовьте тезисы, зарисовки или полный текст выступления.</label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -764,7 +764,7 @@
             </li>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Выберите ключевые факты, примеры, истории или данные для поддержки тезисов.</label>
+              <label>Подберите факты, примеры, истории или данные для поддержки тезисов.</label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -780,7 +780,7 @@
             </li>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Добавьте элементы вовлечения (вопросы к аудитории, юмор, визуальные образы).</label>
+              <label>Добавьте элементы вовлечения (вопросы к аудитории, юмор, видео, интерактив...).</label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -836,7 +836,7 @@
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Практикуйте выступление перед зеркалом, друзьями или запишите на видео.</label>
+              <label>Практикуйте выступление перед зеркалом или запишите на видео.</label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -888,7 +888,7 @@
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
-              <label>Подумайте о возможных вопросах от аудитории.</label>
+              <label>Подумайте о возможных вопросах от аудитории. <br> (Будет круто, если вы ответите на них в выступлении) </label>
               <div class="sub-item-buttons">
                 <button class="edit-sub-button" onclick="editSubItem(this)">✏️</button>
                 <button class="delete-button" onclick="removeSubItem(this)">×</button>
@@ -1118,7 +1118,7 @@
       <br>
       <button id="downloadImageBtn">💾 Скачать изображение</button>
       <p style="color: # 000000; font-size: 0.9rem; margin-top: 10px;">
-        Если изображение не скачивается автоматически, кликните по нему правой кнопкой и выберите "Сохранить изображение как..."
+        Если изображение не скачивается -> Нажми на 3 точки в правом верхнем углу -> Настройки -> Нужно выкл "Исп. встроенный браузер"
       </p>
       <div class="loading" id="modalLoading">
         <div class="spinner"></div>
