--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
       <br>
       <button id="downloadImageBtn">💾 Скачать изображение</button>
       <p style="color: # 000000; font-size: 0.9rem; margin-top: 10px;">
-        Если изображение не скачивается -> Нажми на 3 точки в правом верхнем углу -> Настройки -> Нужно выкл "Исп. встроенный браузер"
+        Если изображение не скачивается -> Нажми на 3 точки в правом верхнем углу -> Настройки -> Нужно выкл "Исп. встроенный браузер" -> Открой чек лист заново.
       </p>
       <div class="loading" id="modalLoading">
         <div class="spinner"></div>
