--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
       <br>
       <button id="downloadImageBtn">💾 Скачать изображение</button>
       <p style="color: #ccc; font-size: 0.9rem; margin-top: 10px;">
-        Если изображение не скачивается автоматически, кликните по нему правой кнопкой и выберите "Сохранить изображение как..."
+        "Если изображение не скачивается → Нажмите на 3 точки в правом верхнем углу → Настройки → Выключите "Использовать встроенный браузер" → Запустите заново"
       </p>
       <div class="loading" id="modalLoading">
         <div class="spinner"></div>
