--- a/index.html
+++ b/index.html
@@ -107,17 +107,16 @@
     .checklist-header {
       display: flex;
       align-items: center;
+      cursor: pointer;
+      padding: 5px 0;
     }
     .checklist-item .main-label {
       font-size: 1.1rem;
       font-weight: 600;
       color: var(--dark);
-      cursor: pointer;
-      transition: all 0.3s ease;
       flex-grow: 1;
       margin-right: 40px;
       word-break: break-word;
-      padding: 5px 0;
       line-height: 1.4;
     }
     .checklist-item .main-label.checked {
@@ -702,10 +701,11 @@
     </div>
     <div class="progress-text" id="progressText">0% завершено</div>
     <ul id="main-checklist">
+      <!-- Пункт 1 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item1" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Определение цели<br>и аудитории</label>
+          <label class="main-label">Определение цели<br>и аудитории</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -738,10 +738,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 2 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item2" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Подготовка содержания</label>
+          <label class="main-label">Подготовка содержания</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -790,10 +792,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 3 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item3" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Создание визуальных материалов</label>
+          <label class="main-label">Создание визуальных материалов</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -826,10 +830,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 4 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item4" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Репетиция</label>
+          <label class="main-label">Репетиция</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -878,10 +884,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 5 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item5" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Подготовка к вопросам</label>
+          <label class="main-label">Подготовка к вопросам</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -914,10 +922,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 6 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item6" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Техническая подготовка</label>
+          <label class="main-label">Техническая подготовка</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -958,10 +968,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 7 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item7" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Личная подготовка</label>
+          <label class="main-label">Личная подготовка</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -1002,10 +1014,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 8 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item8" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">День выступления</label>
+          <label class="main-label">День выступления</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -1054,10 +1068,12 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
+
+      <!-- Пункт 9 -->
       <li class="checklist-item">
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="item9" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">После выступления</label>
+          <label class="main-label">После выступления</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -1110,7 +1126,7 @@
     <div id="image-content"></div>
   </div>
 
-  <!-- Модальное окно для изображения чек-листа -->
+  <!-- Модальное окно -->
   <div id="imageModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
@@ -1127,10 +1143,8 @@
     </div>
   </div>
 
-  <!-- Подключаем html2canvas -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script>
-    // Функция обновления прогресса
     function updateProgress() {
       const totalItems = document.querySelectorAll('.checklist-item input[type="checkbox"], .sub-list input[type="checkbox"]').length;
       const checkedItems = document.querySelectorAll('.checklist-item input[type="checkbox"]:checked, .sub-list input[type="checkbox"]:checked').length;
@@ -1147,26 +1161,23 @@
       }
     }
 
-    // Переключение подсписка
-    function toggleSubList(label) {
-      const subList = label.closest('.checklist-item').querySelector('.sub-list');
+    function toggleSubList(header) {
+      const subList = header.parentElement.querySelector('.sub-list');
       subList.classList.toggle('active');
       updateProgress();
     }
 
-    // Отметка чекбокса
     function toggleChecked(checkbox) {
-      const item = checkbox.nextElementSibling;
+      const label = checkbox.nextElementSibling;
       if (checkbox.checked) {
-        item.classList.add('checked');
+        label.classList.add('checked');
       } else {
-        item.classList.remove('checked');
+        label.classList.remove('checked');
       }
       saveChecklistState();
       updateProgress();
     }
 
-    // Добавление подпункта
     function showAddInput(button) {
       const subList = button.parentElement;
       let inputContainer = subList.querySelector('.add-input-container');
@@ -1289,9 +1300,9 @@
       const newItem = document.createElement('li');
       newItem.className = 'checklist-item';
       newItem.innerHTML = `
-        <div class="checklist-header">
+        <div class="checklist-header" onclick="toggleSubList(this)">
           <input type="checkbox" id="${newId}" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Новый раздел</label>
+          <label class="main-label">Новый раздел</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
@@ -1417,7 +1428,6 @@
       updateProgress();
     }
 
-    // Функция генерации и показа изображения
     function showChecklistImage() {
       try {
         const mainItems = document.querySelectorAll('.checklist-item');
@@ -1524,17 +1534,8 @@
       }
     }
 
-    // Загрузка состояния при запуске
     document.addEventListener('DOMContentLoaded', function() {
       loadChecklistState();
-      if ('ontouchstart' in window) {
-        document.querySelectorAll('.checklist-item, .sub-list li').forEach(item => {
-          item.style.cursor = 'pointer';
-        });
-        document.querySelectorAll('button').forEach(button => {
-          button.style.touchAction = 'manipulation';
-        });
-      }
     });
   </script>
 </body>
