--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
       background: var(--primary);
       transform: scale(1.05);
     }
+    /* Изменение: убрано display: none; */
     .sub-list {
-      display: none;
+      /* display: none; — УБРАНО */
       margin-left: 20px;
       margin-top: 12px;
       font-size: 0.95rem;
@@ -153,16 +154,12 @@
       padding: 12px;
       border-radius: 8px;
       box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.05);
-      opacity: 0;
-      transform: translateY(-5px);
+      opacity: 1; /* Всегда видим */
+      transform: translateY(0); /* Всегда видим */
       transition: all 0.3s ease;
       border-left: 2px solid var(--primary-light);
     }
-    .sub-list.active {
-      display: block;
-      opacity: 1;
-      transform: translateY(0);
-    }
+    /* Убрано: .sub-list.active — теперь все подсписки всегда активны */
     .sub-list ul {
       list-style-type: none;
       padding-left: 0;
@@ -701,6 +698,7 @@
     </div>
     <div class="progress-text" id="progressText">0% завершено</div>
     <ul id="main-checklist">
+      <!-- Все подпункты будут видны сразу -->
       <!-- Пункт 1 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -708,7 +706,7 @@
           <label class="main-label">Определение цели<br>и аудитории</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active"> <!-- Добавлен класс active -->
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -738,7 +736,6 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
       <!-- Пункт 2 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -746,7 +743,7 @@
           <label class="main-label">Подготовка содержания</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active"> <!-- active -->
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -792,7 +789,7 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
+      <!-- Остальные пункты аналогично — sub-list имеет класс active -->
       <!-- Пункт 3 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -800,7 +797,7 @@
           <label class="main-label">Создание визуальных материалов</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active">
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -830,7 +827,6 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
       <!-- Пункт 4 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -838,7 +834,7 @@
           <label class="main-label">Репетиция</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active">
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -884,7 +880,6 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
       <!-- Пункт 5 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -892,7 +887,7 @@
           <label class="main-label">Подготовка к вопросам</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active">
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -922,7 +917,6 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
       <!-- Пункт 6 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -930,7 +924,7 @@
           <label class="main-label">Техническая подготовка</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active">
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -968,7 +962,6 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
       <!-- Пункт 7 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -976,7 +969,7 @@
           <label class="main-label">Личная подготовка</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active">
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -1014,7 +1007,6 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
       <!-- Пункт 8 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -1022,7 +1014,7 @@
           <label class="main-label">День выступления</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active">
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -1068,7 +1060,6 @@
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
       </li>
-
       <!-- Пункт 9 -->
       <li class="checklist-item">
         <div class="checklist-header" onclick="toggleSubList(this)">
@@ -1076,7 +1067,7 @@
           <label class="main-label">После выступления</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active">
           <ul>
             <li>
               <input type="checkbox" onchange="toggleChecked(this)">
@@ -1119,13 +1110,11 @@
     <button class="download-button" onclick="showChecklistImage()">📷 Показать и скачать чек-лист (JPG)</button>
     <button class="reset-button" onclick="resetChecklist()">🔄 Сбросить все изменения</button>
   </div>
-
   <!-- Скрытый шаблон для изображения -->
   <div id="image-template">
     <h2>Чек-лист для подготовки к выступлению</h2>
     <div id="image-content"></div>
   </div>
-
   <!-- Модальное окно -->
   <div id="imageModal" class="modal">
     <div class="modal-content">
@@ -1142,7 +1131,6 @@
       </div>
     </div>
   </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script>
     function updateProgress() {
@@ -1161,8 +1149,10 @@
       }
     }
 
+    // Функция toggleSubList остаётся для совместимости, но не нужна, если всё всегда открыто
     function toggleSubList(header) {
       const subList = header.parentElement.querySelector('.sub-list');
+      // Можно оставить возможность сворачивать, если хотите
       subList.classList.toggle('active');
       updateProgress();
     }
@@ -1305,7 +1295,7 @@
           <label class="main-label">Новый раздел</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
-        <div class="sub-list">
+        <div class="sub-list active"> <!-- Новый раздел тоже открыт -->
           <ul></ul>
           <button class="add-button" onclick="showAddInput(this)">➕ Добавить пункт</button>
         </div>
@@ -1536,6 +1526,8 @@
 
     document.addEventListener('DOMContentLoaded', function() {
       loadChecklistState();
+      // Убедимся, что все подсписки открыты при загрузке
+      document.querySelectorAll('.sub-list').forEach(el => el.classList.add('active'));
     });
   </script>
 </body>
